# stadia-x

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
assessments/: hybrid_graph_rag_architecture.md  reference_graph_traversal_design.md
db/: schema.sql
design-system/: CUSTOMIZATION.md  DESIGN.md  README.md  design-preview.html  fonts.example.tsx  tailwind-theme.css  tokens.css
design-system/components/: ProvenanceMargin.tsx  ProvenanceMarker.tsx  SidebarNavItem.tsx  TitleBlock.tsx  titleBlock.ts  types.ts
docs/: BUILD.md  PLAN.md  ROADMAP.md  STADIA_X_REPLICATION.md  extraction-build-spec.md  retrieval-spec.md
docs/archive/: REPLICATION_GUIDE_stadia-x.md  extraction-build-spec.md
ingest/: applies_to.py  build_graph.py  contextualize.py  extract.py  extract_afc.py  figures.py  figures_prototype.py  gen_eval.py  init_db.py  load.py  ocr.py  storage.py  vision_transcribe_prototype.py
open-prs/: feat-roadmap-p0-p3.md
shared/: models.py
stadia_core/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
stadia_core/examples/: sample.md
stadia_core/fuseki/: shiro.ini  start.sh
stadia_core/queries/: example.rq
stadia_core/stadia/: __init__.py  config.py  emit.py  extract.py  load.py  model.py  parse.py  pipeline.py  query.py  reason.py  retrieve.py  uri.py  validate.py
stadia_x_starter/: README.md  extract_harness.py  hybrid_search.py
studio/: package-lock.json  package.json  vercel.json
studio/eval/: competency-questions.md  judge.mjs  pairs-generated.json  pairs.json  run.mjs
studio/src/: proxy.ts
(+61 files in other folders)
