[project]
name = "stadia-core"
version = "0.1.0"
description = "Source-agnostic policy/standards -> RDF graph -> query pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.1",
    "requests>=2.32",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
pdf = ["pymupdf>=1.24"]
shacl = ["pyshacl>=0.26"]
reason = ["owlrl>=7.1"]
vector = ["numpy>=1.26"]
all = ["anthropic>=0.40", "pymupdf>=1.24", "pyshacl>=0.26", "owlrl>=7.1", "numpy>=1.26"]

[project.scripts]
stadia = "stadia.pipeline:main"
stadia-query = "stadia.query:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stadia"]
